# NetTrace

./: ENVIRONMENT_SETUP.md  GUI_USAGE.md  README.md  activate.bat  activate.ps1  pyproject.toml  setup.py  setup_env.bat  setup_env.ps1  sniffer.py  sniffer_gui.py  test_sniffer.py
network_sniffer/: __init__.py
tests/: __init__.py
