[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-packet-sniffer"
version = "1.0.0"
description = "A robust network packet sniffer with cross-platform support"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "xytex-s"}
]
keywords = ["network", "packet", "sniffer", "capture", "pcap", "networking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
dependencies = [
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/xytex-s/Network-Packet-Sniffer"
Repository = "https://github.com/xytex-s/Network-Packet-Sniffer"
Issues = "https://github.com/xytex-s/Network-Packet-Sniffer/issues"

[project.scripts]
packet-sniffer = "sniffer:main"

[tool.setuptools]
packages = ["network_sniffer"]

[tool.setuptools.package-data]
"*" = ["*.md", "LICENSE"]
